updated feeds api response schema to include channel names
